# homeless

./: README.md  app.py  docker-compose.yml  pyproject.toml  requirments.txt
api/: people.py
config/: my.cnf
db/: engineer.py  model.py  repository.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
service/: model.py  people.py
